manifests/event-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: event-api
  namespace: event-api
  labels:
    app: event-api
spec:
  ports:
    - port: 5000
      protocol: TCP
      name: api
  selector:
    app: event-api
